# LinkSentinel

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: link-check.yml  link-sentinel-external.yml  test.yml
testDocs/: test.md  test.rst
