[tool.poetry]
name = "linksentinel"
version = "1.0.0"
description = "CLI tool and GitHub Action to check broken links in documentation files"
authors = ["Mikel Sanchez <nottherealwallyx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.32.4,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
isort = "^7.0.0"
black = "^25.11.0"
pre-commit = "^4.4.0"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

